@@ -1,3 +1,9 @@
+2009-12-29  Pawel Salek
+
+	* libbalsa/rfc3156.c:
+	* src/main-window.c: add comments to aid translations...
+	* src/sendmsg-window.c: ... to fix bug 605435.
+
 2009-12-29  Peter Bloomfield
 
 	* libbalsa/html.c (lbh_resource_request_starting_cb),
@@ -99,7 +105,7 @@
 2009-12-06  Pawel Salek
 
 	* configure.in
-	* NEWS: release balsa-2.4.1
+	* NEWS: release balsa-2.4.2
 
 2009-12-03  Peter Bloomfield
 
